# Autonomous-Library-Robot

./: README.md
src/common/contact_graspnet/: .gitignore  CMakeLists.txt  README.md
src/common/contact_graspnet/launch/: contact_graspnet.launch
src/common/contact_graspnet/src/contact_graspnet/: config.yaml  contact_graspnet_model.py  generate_grasps_server_local.py
src/common/contact_graspnet/srv/: DetectBoxes.srv
src/common/custom_worlds/: README.md  move.py
src/common/custom_worlds/launch/: library.launch  tiago_mapping.launch  tiago_navigation.launch  wrs.launch
src/common/custom_worlds/models/books_01_got_book/: model-1_4.sdf  model.config
src/common/custom_worlds/models/books_02_oldman_book/: model-1_4.sdf  (+1 more)
src/common/custom_worlds/scripts/: spawn_objects
src/common/custom_worlds/worlds/: library.world  wrs2020.world
src/common/custom_worlds/wrs2020/: map.pgm
src/common/pcl_manipulation/: CMakeLists.txt  README.md  package.xml
src/common/pcl_manipulation/include/: cartesian_filter.h  centroid.h  combine_clouds.h  downsample.h  euclidian.h  min_max.h  pcl_manipulation_server.h  segmentation.h
src/common/pcl_manipulation/src/: cartesian_filter.cpp  centroid.cpp  combine_clouds.cpp  downsample.cpp  euclidian.cpp  min_max.cpp  pcl_manipulation_server.cpp  segmentation.cpp
src/common/pcl_manipulation/srv/: CartesianFilter.srv  Centroid.srv  CombineClouds.srv  Crop.srv  Downsample.srv  Euclidian.srv  MinMax.srv  RemoveOutliers.srv  SegmentPlane.srv
src/common/take_pics/: CMakeLists.txt  README.md  package.xml
src/common/take_pics/src/: take_pics.py
src/common/yolo_object_detection/: CMakeLists.txt  README.md  package.xml
src/common/yolo_object_detection/launch/: service.launch
src/common/yolo_object_detection/msg/: Detection.msg
src/containers/: README.md  install_singularity.sh  requirements.txt  requirements_.txt  tiago.def  tiago_cuda.def
src/pick_up_object/: CMakeLists.txt  README.md
src/pick_up_object/launch/: pick_up_object.launch
src/pick_up_object/src/pick_up_object/: pickup_sm.py
(+88 files in other folders)
